@@ -31,6 +31,7 @@ dependencies {
     implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    implementation 'org.postgresql:postgresql:42.7.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
 }
@@ -49,8 +50,7 @@ tasks.withType(JavaCompile).configureEach {
 tasks.withType(JavaExec).configureEach {
     jvmArgs += [
         "--enable-preview",
-        "--add-opens", "javafx.graphics/com.sun.glass.utils=ALL-UNNAMED",
-        "--add-opens", "javafx.graphics/com.sun.marlin=ALL-UNNAMED",
+        "--enable-native-access=ALL-UNNAMED",
         "--add-opens", "java.base/java.lang=ALL-UNNAMED"
     ]
 }
